bugfixes and moved base code for post and patch transactions to saveOrUpdateTransactions service method. Moved SuccessErrorMessage and DataError objects into more appropriately named HTTP response objects, migrated Vendor and paymethod objects to hold foreign keys to each other's objects, need to cleanup the database next